--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Job Finder &mdash; Colorlib Website Template</title>
+    <title th:text="#{home.title}">Tìm công việc, uy tín, nhanh với TaskUnite</title>
     <th:block th:replace="fragment/layout :: head"> </th:block>
 </head>
 <body>
@@ -16,36 +16,33 @@
     <div style="height: 113px;"></div>
 
     <div class="site-blocks-cover overlay" th:style="'background-image: url(' + @{/images/hero_1.jpg} + ');'"
-         style="background-image: url('../static/images/hero_1.jpg');" data-aos="fade" data-stellar-background-ratio="0.5">
+         data-aos="fade" data-stellar-background-ratio="0.5">s
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-12" data-aos="fade">
-                    <h1>Find Job</h1>
+                    <h1 th:text="#{home.find-job}">Find Job</h1>
                     <form action="#">
                         <div class="row mb-3">
                             <div class="col-md-9">
                                 <div class="row">
                                     <div class="col-md-6 mb-3 mb-md-0">
-                                        <input type="text" class="mr-3 form-control border-0 px-4" placeholder="job title, keywords or company name ">
+                                        <input type="text" class="mr-3 form-control border-0 px-4" th:placeholder="#{home.job-title-keywords-or-company-name}">
                                     </div>
                                     <div class="col-md-6 mb-3 mb-md-0">
                                         <div class="input-wrap">
                                             <span class="icon icon-room"></span>
-                                            <input type="text" class="form-control form-control-block search-input  border-0 px-4" id="autocomplete" placeholder="city, province or region" onFocus="geolocate()">
+                                            <input type="text"
+                                                   class="form-control form-control-block search-input  border-0 px-4"
+                                                   id="autocomplete" th:placeholder="#{home.city-province-or-region}"
+                                                   onFocus="geolocate()">
                                         </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-md-3">
-                                <input type="submit" class="btn btn-search btn-primary btn-block" value="Search">
+                                <input type="submit" class="btn btn-search btn-primary btn-block" th:value="#{home.search}">
                             </div>
                         </div>
-                        <div class="row">
-                            <div class="col-md-12">
-                                <p class="small">or browse by category: <a href="#" class="category">Category #1</a> <a href="#" class="category">Category #2</a></p>
-                            </div>
-                        </div>
-
                     </form>
                 </div>
             </div>
@@ -56,7 +53,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-6 mx-auto text-center mb-5 section-heading">
-                    <h2 class="mb-5">Popular Categories</h2>
+                    <h2 class="mb-5" th:text="#{home.category}">Categories</h2>
                 </div>
             </div>
             <div class="row">
@@ -117,131 +114,112 @@
                     </a>
                 </div>
             </div>
-
         </div>
     </div>
 
     <div class="site-section bg-light">
         <div class="container">
             <div class="row">
-                <div class="col-md-8 mb-5 mb-md-0" data-aos="fade-up" data-aos-delay="100">
-                    <h2 class="mb-5 h3">Recent Jobs</h2>
+                <div class="col-md-12 mb-5 mb-md-0" data-aos="fade-up" data-aos-delay="100">
+                    <h2 class="mb-5 h3" th:text="#{home.recent-job}">Recent Jobs</h2>
                     <div class="rounded border jobs-wrap">
-
                         <a href="job-single.html" class="job-item d-block d-md-flex align-items-center  border-bottom fulltime">
                             <div class="company-logo blank-logo text-center text-md-left pl-3">
-                                <img src="images/company_logo_blank.png" alt="Image" class="img-fluid mx-auto">
+                                <img src="images/company_logo_blank.png" alt="Avatar master" class="img-fluid mx-auto">
                             </div>
                             <div class="job-details h-100">
                                 <div class="p-3 align-self-center">
-                                    <h3>Restaurant Crew</h3>
+                                    <h3>Nhân viên chạy văn phòng</h3>
                                     <div class="d-block d-lg-flex">
-                                        <div class="mr-3"><span class="icon-suitcase mr-1"></span> Resto Bar</div>
-                                        <div class="mr-3"><span class="icon-room mr-1"></span> Florida</div>
-                                        <div><span class="icon-money mr-1"></span> $55000 &mdash; 70000</div>
+                                        <div class="mr-3">
+                                            <span class="icon-user mr-1 text-purple"></span> Ng. Công
+                                        </div>
+                                        <div class="mr-3">
+                                            <span class="icon-room mr-1 text-pink"></span>
+                                            Phúc Diễn, Từ Liêm, Hà Nội
+                                        </div>
+                                        <div class="job-des-preview"
+                                             th:title="'Công việc nhẹ nhàng! Lương ko phải nghĩ!'">
+                                            <span class="icon-file-text mr-1 text-secondary"></span>
+                                            Công việc nhẹ nhàng! Lương ko phải nghĩ!
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="job-category align-self-center">
                                 <div class="p-3">
-                                    <span class="text-info p-2 rounded border border-info">Full Time</span>
+                                    <span class="text-info p-2 pl-4 pr-4 rounded border border-info">Apply</span>
                                 </div>
                             </div>
                         </a>
-
-                        <a href="job-single.html" class="job-item d-block d-md-flex align-items-center freelance">
+                        <a href="job-single.html" class="job-item d-block d-md-flex align-items-center  border-bottom fulltime">
                             <div class="company-logo blank-logo text-center text-md-left pl-3">
-                                <img src="images/logo_1.png" alt="Image" class="img-fluid mx-auto">
+                                <img src="images/company_logo_blank.png" alt="Avatar master" class="img-fluid mx-auto">
                             </div>
                             <div class="job-details h-100">
                                 <div class="p-3 align-self-center">
-                                    <h3>JavaScript Fullstack Developer</h3>
+                                    <h3>Nhân viên chạy văn phòng</h3>
                                     <div class="d-block d-lg-flex">
-                                        <div class="mr-3"><span class="icon-suitcase mr-1"></span> Cooper</div>
-                                        <div class="mr-3"><span class="icon-room mr-1"></span> Anywhere</div>
-                                        <div><span class="icon-money mr-1"></span> $55000 &mdash; 70000</div>
+                                        <div class="mr-3">
+                                            <span class="icon-user mr-1 text-purple"></span> Ng. Công
+                                        </div>
+                                        <div class="mr-3">
+                                            <span class="icon-room mr-1 text-pink"></span>
+                                            Phúc Diễn, Từ Liêm, Hà Nội
+                                        </div>
+                                        <div class="job-des-preview"
+                                             th:title="'Công việc nhẹ nhàng! Lương ko phải nghĩ!'">
+                                            <span class="icon-file-text mr-1 text-secondary"></span>
+                                            Công việc nhẹ nhàng! Lương ko phải nghĩ!
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="job-category align-self-center">
                                 <div class="p-3">
-                                    <span class="text-warning p-2 rounded border border-warning">Freelance</span>
+                                    <span class="text-info p-2 pl-4 pr-4 rounded border border-info">Apply</span>
                                 </div>
                             </div>
                         </a>
-
-
-                        <a href="job-single.html" class="job-item d-block d-md-flex align-items-center freelance">
+                        <a href="job-single.html" class="job-item d-block d-md-flex align-items-center  border-bottom fulltime">
                             <div class="company-logo blank-logo text-center text-md-left pl-3">
-                                <img src="images/logo_1.png" alt="Image" class="img-fluid mx-auto">
+                                <img src="images/company_logo_blank.png" alt="Avatar master" class="img-fluid mx-auto">
                             </div>
                             <div class="job-details h-100">
                                 <div class="p-3 align-self-center">
-                                    <h3>ReactJS Fullstack Developer</h3>
+                                    <h3>Nhân viên chạy văn phòng</h3>
                                     <div class="d-block d-lg-flex">
-                                        <div class="mr-3"><span class="icon-suitcase mr-1"></span> Cooper</div>
-                                        <div class="mr-3"><span class="icon-room mr-1"></span> Anywhere</div>
-                                        <div><span class="icon-money mr-1"></span> $55000 &mdash; 70000</div>
+                                        <div class="mr-3">
+                                            <span class="icon-user mr-1 text-purple"></span> Ng. Công
+                                        </div>
+                                        <div class="mr-3">
+                                            <span class="icon-room mr-1 text-pink"></span>
+                                            Phúc Diễn, Từ Liêm, Hà Nội
+                                        </div>
+                                        <div class="job-des-preview"
+                                             th:title="'Công việc nhẹ nhàng! Lương ko phải nghĩ!'">
+                                            <span class="icon-file-text mr-1 text-secondary"></span>
+                                            Công việc nhẹ nhàng! Lương ko phải nghĩ!
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                             <div class="job-category align-self-center">
                                 <div class="p-3">
-                                    <span class="text-warning p-2 rounded border border-warning">Freelance</span>
+                                    <span class="text-info p-2 pl-4 pr-4 rounded border border-info">Apply</span>
                                 </div>
                             </div>
                         </a>
-
-
-                        <a href="job-single.html" class="job-item d-block d-md-flex align-items-center fulltime">
-                            <div class="company-logo blank-logo text-center text-md-left pl-3">
-                                <img src="images/company_logo_blank.png" alt="Image" class="img-fluid mx-auto">
-                            </div>
-                            <div class="job-details h-100">
-                                <div class="p-3 align-self-center">
-                                    <h3>Assistant Brooker, Real Estate</h3>
-                                    <div class="d-block d-lg-flex">
-                                        <div class="mr-3"><span class="icon-suitcase mr-1"></span> RealState</div>
-                                        <div class="mr-3"><span class="icon-room mr-1"></span> New York</div>
-                                        <div><span class="icon-money mr-1"></span> $55000 &mdash; 70000</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="job-category align-self-center">
-                                <div class="p-3">
-                                    <span class="text-info p-2 rounded border border-info">Full Time</span>
-                                </div>
-                            </div>
-                        </a>
-
-                        <a href="job-single.html" class="job-item d-block d-md-flex align-items-center partime">
-                            <div class="company-logo blank-logo text-center text-md-left pl-3">
-                                <img src="images/logo_2.png" alt="Image" class="img-fluid mx-auto">
-                            </div>
-                            <div class="job-details h-100">
-                                <div class="p-3 align-self-center">
-                                    <h3>Telecommunication Manager</h3>
-                                    <div class="d-block d-lg-flex">
-                                        <div class="mr-3"><span class="icon-suitcase mr-1"></span> Think</div>
-                                        <div class="mr-3"><span class="icon-room mr-1"></span> London</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="job-category align-self-center">
-                                <div class="p-3">
-                                    <span class="text-danger p-2 rounded border border-danger">Par Time</span>
-                                </div>
-                            </div>
-                        </a>
-
-
                     </div>
 
                     <div class="col-md-12 text-center mt-5">
-                        <a href="#" class="btn btn-primary rounded py-3 px-5"><span class="icon-plus-circle"></span> Show More Jobs</a>
+                        <a href="#" class="btn btn-primary rounded py-3 px-5">
+                            <span class="icon-plus-circle"></span>
+                            <th:block th:text="#{home.show-more}"> </th:block>
+                        </a>
                     </div>
                 </div>
-                <div class="col-md-4 block-16" data-aos="fade-up" data-aos-delay="200">
+                <div class="col-md-12 block-16" data-aos="fade-up" data-aos-delay="200">
                     <div class="d-flex mb-0">
                         <h2 class="mb-5 h3 mb-0">Featured Jobs</h2>
                         <div class="ml-auto mt-1"><a href="#" class="owl-custom-prev">Prev</a> / <a href="#" class="owl-custom-next">Next</a></div>
