--- a/src/main/resources/templates/create-task-step-2.html
+++ b/src/main/resources/templates/create-task-step-2.html
@@ -230,9 +230,7 @@
                                                   placeholder="Nội dung công việc, lời nhắn hoặc những yêu cầu cho công việc này. Cám ơns!" ></textarea>
                                     </div>
                                     <div class="mt-5 form-group text-center">
-                                        <button class="btn btn-success btn-continue px-4" data-type="description"
-                                                th:type="button">Tiếp tục
-                                        </button>
+                                        <a href=""></a>
                                     </div>
                                 </div>
                                 <div class="form-group preview-content d-none">
@@ -242,10 +240,8 @@
                             </div>
                         </div>
                         <div class="row form-group">
-                            <div class="col-md-12 text-right">
-                                <a href="javascript:void (0)" id="next-step2">
-                                    <button type="button" class="btn btn-success py-2 px-5" disabled="disabled">Tiếp tục</button>
-                                </a>
+                            <div class="col-md-12">
+                                <input class="btn btn-success py-2 px-5" type="submit" value="Post a Job">
                             </div>
                         </div>
                     </form>
