--- a/src/main/resources/templates/create-task-step-1.html
+++ b/src/main/resources/templates/create-task-step-1.html
@@ -124,6 +124,34 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="row form-group">
+                            <div class="col-md-12 mb-3 mb-md-0 task-box bg-white border" data-editing=false
+                                 data-state="empty">
+                                <span class="status-task-box">
+                                    <i class="icon-done text-primary"></i>
+                                </span>
+                                <div class="form-group text-uppercase text-label">Tên công việc
+                                    <span class="text-danger error-msg d-none"></span>
+                                </div>
+                                <div class="box-input">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" id="title-task"
+                                               placeholder="Nhập tên công việc">
+                                    </div>
+                                    <div class="mt-5 form-group text-center">
+                                        <button class="btn btn-success btn-continue px-4" data-type="title"
+                                                th:type="button">Tiếp tục
+                                        </button>
+                                    </div>
+                                </div>
+                                <div class="form-group preview-content d-none">
+                                    <i class="icon-title text-purple mr-1"></i>
+                                    <span class="content">
+
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
 
                         <div class="row form-group">
                             <div class="col-md-12 mb-3 mb-md-0 task-box bg-white border" data-editing=false
@@ -171,7 +199,7 @@
                                     </div>
                                 </div>
                                 <div class="form-group preview-content d-none">
-                                    <i class="icon-book text-purple mr-1"></i>
+                                    <i class="icon-book text-orange mr-1"></i>
                                     <span class="content">
 
                                     </span>
@@ -353,5 +381,6 @@
 </div>
 <th:block th:include="fragment/layout :: javascript"></th:block>
 <script th:src="@{/js/task-step.js}"></script>
+<script th:src="@{/js/task-step1.js}"></script>
 </body>
 </html>
