--- a/src/main/resources/templates/fragment/layout.html
+++ b/src/main/resources/templates/fragment/layout.html
@@ -186,25 +186,28 @@
     <script th:src="@{/js/aos.js}"></script>
     <script th:src="@{/js/mediaelement-and-player.min.js}"></script>
     <script th:src="@{/js/main.js}"></script>
-        <script>
-            document.addEventListener('DOMContentLoaded', function() {
-                var mediaElements = document.querySelectorAll('video, audio'), total = mediaElements.length;
+    <script th:src="@{/js/app.js}"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            var mediaElements = document.querySelectorAll('video, audio'), total = mediaElements.length;
 
-                for (var i = 0; i < total; i++) {
-                    new MediaElementPlayer(mediaElements[i], {
-                        pluginPath: 'https://cdn.jsdelivr.net/npm/mediaelement@4.2.7/build/',
-                        shimScriptAccess: 'always',
-                        success: function () {
-                            var target = document.body.querySelectorAll('.player'), targetTotal = target.length;
-                            for (var j = 0; j < targetTotal; j++) {
-                                target[j].style.visibility = 'visible';
-                            }
+            for (var i = 0; i < total; i++) {
+                new MediaElementPlayer(mediaElements[i], {
+                    pluginPath: 'https://cdn.jsdelivr.net/npm/mediaelement@4.2.7/build/',
+                    shimScriptAccess: 'always',
+                    success: function () {
+                        var target = document.body.querySelectorAll('.player'), targetTotal = target.length;
+                        for (var j = 0; j < targetTotal; j++) {
+                            target[j].style.visibility = 'visible';
                         }
-                    });
-                }
-            });
-        </script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCHAsBwcpdVr3Yrr6N2szcfMK5MYdfi3k0&libraries=places&callback=initAutocomplete" async defer></script>
+                    }
+                });
+            }
+        });
+    </script>
+    <script
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCHAsBwcpdVr3Yrr6N2szcfMK5MYdfi3k0&libraries=places&callback=initAutocomplete"
+        async defer></script>
 </th:block>
 </body>
 </html>
